# prediccion-abandono-vivienda

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
data/interim/: ageb_clean.csv
data/mapas/: denue_inegi_26_.shp
data/processed/: ageb_features.csv  catastro_hermosillo.csv  train_catastro.csv  train_catastro.parquet  train_ready.csv  train_ready.parquet
data/processed/maps/: agebs_hermosillo_completo.geojson  mapa_abandono.html  mapa_bivar_valor_denue.html  mapa_catastral.html  mapa_denue.html  mapa_rezago.html
data/raw/: catastro_hermosillo_2025.csv  conapo_2020.xlsx
notebooks/: 0_Exploración_datos.ipynb  0_seleccion_variables.ipynb  1.0-francisco-exploracion.ipynb  1.0_EDA.ipynb  3.0-catastro-EDA.ipynb  4.0-mapa-agebs-hermosillo.ipynb  5.0-regresion-logistica.ipynb  5.1-svm.ipynb  5.4_Modelo_GradientBoosting.ipynb  RandomForest Test.ipynb
references/: diccionario_ageb_features.md  diccionario_conapo.xlsx
reports/: analisis_resultados.md  justificacion_modelos_avanzados.md
reports/maps/: 2_hermosillo.html  3_cajeme.html  4_nogales.html  5_navojoa.html  6_guaymas.html  7_san_luis_rc.html
src/: test_mlflow.py
src/data/: make_dataset.py  make_parquet.py  make_parquet_catastro.py
src/features/: build_features.py
src/models/: utils.py
