[project]
name = "prediccion-abandono-vivienda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dagshub>=0.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
